--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -1,12 +1,11 @@
 ﻿@page "/fetchdata"
 
 @using blazor_base.Data
-@*@inject WeatherForecastService ForecastService*@
 @inject O365Data O365txt
 
 <h1>Institutional Knowledge Learner on O365</h1>
 
-<p>This Connects to O365 content (as text) and fetches data to feed to Kmeans model</p>
+<p>This WebApp consumes O365 content data to feed to an ML model that will categorize your unstructured text for you</p>
 
 @if (O365txt == null)
 {
@@ -17,10 +16,10 @@ else
     <table class="table">
         <thead>
             <tr>
-                @*<th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>*@
+                <th>Msg Num</th>
+                <th>Subject</th>
+                <th>Body</th>
+                <th>Centroid #</th>
             </tr>
         </thead>
         <tbody>
