--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -19,7 +19,7 @@
         </li>*@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch Your O365 Data
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Get 'er
             </NavLink>
         </li>
     </ul>
