--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,12 +1,14 @@
 ﻿@inherits LayoutComponentBase
 
+
+
 <div class="sidebar">
     <NavMenu />
 </div>
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="https://docs.microsoft.com/aspnet/" target="_blank">R:ead S:ome P:ropaganda</a>
+        <a href="https://docs.microsoft.com/aspnet/" target="_blank">Ms Propoganda</a>
     </div>
 
     <div class="content px-4">
