--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
 
-<h>|\-</h>
+<h> Cluster Your O365 Inbox </h>
 
-<SurveyPrompt Title="Use the navigation menu to the left to get started" />
+<SurveyPrompt Title="" />
