1st centroid shown

--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -19,7 +19,7 @@ else
                 <th>Logged in and fetching obj[0] msg data? @o365Data.LoggedIn.ToString()</th>
                 <th>Subject</th>
                 <th>Body</th>
-                <th>Centroid</th>
+                <th>Centroid 0: @o365Data.Centroids[0]</th>
             </tr>
         </thead>
         <tbody>
