fleshing-out-view-of-results---

--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -56,7 +56,7 @@ else
         <tbody>
 
             <tr>
-                <td> k =  @o365Data.Centroids.Count</td>
+                <td> k =  @o365Data.kStr</td>
 
                 @*@<td>@o365Data.Subject[0]</td>*@
                 @*<td>@o365Data.Body[0]</td>*@
