--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -9,7 +9,7 @@
 
 <p>This WebApp consumes O365 email and Clusters the content into unlabeled groups</p>
 
-@if (isLoaded)
+@if (!isLoaded)
 {
     <br />
     <p>working</p>
@@ -43,8 +43,8 @@ else
     <InputText id="Password" @bind-Value="o365Data.Password" type="password"></InputText>
     N:umber of Clusters
     <InputText id="kStr" @bind-Value="o365Data.kStr"></InputText>
-    N:umber of Msgs to Cluster
-    <InputText id="documents" @bind-Value="o365Data.NumberOfDocs"></InputText>
+    N:umber of Msgs to Cluster, >> 3
+    <InputText id="documents" @bind-Value="o365Data.NumberOfDocs">4</InputText>
 
     <button class="button @selected" @ref=buttonSend onclick="(async () => await OnButtonClick())" id="submitter" type="submit">Organize / Cluster my Email</button>
 </EditForm>
